<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/saveButton2"
        android:layout_width="124dp"
        android:layout_height="71dp"
        android:layout_marginTop="57dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tahikardia" />

    <EditText
        android:id="@+id/lowerPressure"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="lower pressure"
        android:ems="10"
        android:hint="@string/lower_pressure"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/pulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/higherPressure" />

    <TextView
        android:id="@+id/tahikardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/tahikardia"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkTahikardia"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkTahikardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pulse"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="59dp"
        android:autofillHints="pulse"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/checkTahikardia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/higherPressure"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="higher pressure"
        android:ems="10"
        android:hint="@string/higher_pressure"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lowerPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle" />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="40dp"
        android:text="@string/second_title"
        android:textAlignment="center"
        android:textColor="#1C1B1B"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>