<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <Button
        android:id="@+id/saveButton3"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginBottom="162dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/steps"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toBottomOf="@+id/steps" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:autofillHints="weight"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/steps"
        app:layout_constraintEnd_toEndOf="@+id/thirdTitle2"
        app:layout_constraintStart_toStartOf="@+id/thirdTitle2"
        app:layout_constraintTop_toBottomOf="@+id/thirdTitle2" />

    <EditText
        android:id="@+id/steps"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        android:autofillHints="number of steps"
        android:ems="10"
        android:hint="@string/steps"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/saveButton3"
        app:layout_constraintEnd_toEndOf="@+id/weight"
        app:layout_constraintStart_toStartOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/thirdTitle2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="62dp"
        android:text="@string/life_indexes"
        android:textAlignment="center"
        android:textColor="#1C1B1B"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>